templates/workspace_services/azureml/terraform/network.tf
resource "azurerm_network_security_group" "aml" {
  location            = data.azurerm_virtual_network.ws.location
  name                = "nsg-aml"
  resource_group_name = data.azurerm_virtual_network.ws.resource_group_name
  tags                = local.tre_workspace_service_tags

  lifecycle { ignore_changes = [tags] }
}


resource "azurerm_subnet" "aml" {
  name                 = "AMLSubnet${local.short_service_id}"
  virtual_network_name = data.azurerm_virtual_network.ws.name
  resource_group_name  = data.azurerm_virtual_network.ws.resource_group_name
  address_prefixes     = [var.address_space]

  private_endpoint_network_policies_enabled     = true
  private_link_service_network_policies_enabled = true
}

resource "azurerm_subnet_network_security_group_association" "services" {
  network_security_group_id = azurerm_network_security_group.aml.id
  subnet_id                 = azurerm_subnet.aml.id
}

resource "azurerm_network_security_rule" "allow_batch_inbound" {
  count                       = var.is_exposed_externally ? 1 : 0
  access                      = "Allow"
  destination_port_ranges     = ["29876", "29877"]
  destination_address_prefix  = "VirtualNetwork"
  source_address_prefix       = "BatchNodeManagement"
  direction                   = "Inbound"
  name                        = "${local.short_service_id}-batch-inbound-29876"
  network_security_group_name = azurerm_network_security_group.aml.name
  priority                    = 100
  protocol                    = "Tcp"
  resource_group_name         = data.azurerm_resource_group.ws.name
  source_port_range           = "*"
}

resource "azurerm_network_security_rule" "allow_aml_inbound" {
  count                       = var.is_exposed_externally ? 1 : 0
  access                      = "Allow"
  destination_port_ranges     = ["44224"]
  destination_address_prefix  = "VirtualNetwork"
  source_address_prefix       = "AzureMachineLearning"
  direction                   = "Inbound"
  name                        = "${local.short_service_id}-aml-inbound"
  network_security_group_name = azurerm_network_security_group.aml.name
  priority                    = 101
  protocol                    = "Tcp"
  resource_group_name         = data.azurerm_resource_group.ws.name
  source_port_range           = "*"
}

resource "azurerm_network_security_rule" "allow_outbound_storage_445" {
  count                       = var.is_exposed_externally ? 1 : 0
  access                      = "Allow"
  destination_port_range      = "445"
  destination_address_prefix  = "Storage"
  source_address_prefix       = "VirtualNetwork"
  direction                   = "Outbound"
  name                        = "${local.short_service_id}-allow-Outbound_Storage_445"
  network_security_group_name = azurerm_network_security_group.aml.name
  priority                    = 102
  protocol                    = "Tcp"
  resource_group_name         = data.azurerm_resource_group.ws.name
  source_port_range           = "*"
}

resource "azurerm_network_security_rule" "allow_outbound_to_shared_services" {
  access                       = "Allow"
  destination_address_prefixes = data.azurerm_subnet.shared.address_prefixes
  destination_port_range       = "*"
  direction                    = "Outbound"
  name                         = "to-shared-services"
  network_security_group_name  = azurerm_network_security_group.aml.name
  priority                     = 103
  protocol                     = "*"
  resource_group_name          = data.azurerm_resource_group.ws.name
  source_address_prefix        = "*"
  source_port_range            = "*"
}


resource "azurerm_network_security_rule" "allow_outbound_to_internet" {
  access                      = "Allow"
  destination_address_prefix  = "INTERNET"
  destination_port_range      = "443"
  direction                   = "Outbound"
  name                        = "to-internet"
  network_security_group_name = azurerm_network_security_group.aml.name
  priority                    = 104
  protocol                    = "Tcp"
  resource_group_name         = data.azurerm_resource_group.ws.name
  source_address_prefix       = "*"
  source_port_range           = "*"
}


resource "azurerm_network_security_rule" "deny_outbound_override" {
  access                      = "Deny"
  destination_address_prefix  = "*"
  destination_port_range      = "*"
  direction                   = "Outbound"
  name                        = "deny-outbound-override"
  network_security_group_name = azurerm_network_security_group.aml.name
  priority                    = 4096
  protocol                    = "*"
  resource_group_name         = data.azurerm_resource_group.ws.name
  source_address_prefix       = "*"
  source_port_range           = "*"
}

resource "azurerm_network_security_rule" "deny_all_inbound_override" {
  access                      = "Deny"
  destination_address_prefix  = "*"
  destination_port_range      = "*"
  direction                   = "Inbound"
  name                        = "deny-inbound-override"
  network_security_group_name = azurerm_network_security_group.aml.name
  priority                    = 4096
  protocol                    = "*"
  resource_group_name         = data.azurerm_resource_group.ws.name
  source_address_prefix       = "*"
  source_port_range           = "*"
}

resource "azurerm_route_table" "aml" {
  count                         = var.is_exposed_externally ? 1 : 0
  name                          = "rt-aml-${var.tre_id}-${local.short_service_id}"
  resource_group_name           = data.azurerm_resource_group.ws.name
  location                      = data.azurerm_resource_group.ws.location
  disable_bgp_route_propagation = false
  tags                          = local.tre_workspace_service_tags

  lifecycle { ignore_changes = [tags] }

}

resource "azurerm_route" "firewall" {
  count               = var.is_exposed_externally ? 1 : 0
  name                = "rt-aml-${var.tre_id}-${local.short_service_id}"
  resource_group_name = data.azurerm_resource_group.ws.name
  route_table_name    = azurerm_route_table.aml[count.index].name
  address_prefix      = data.azurerm_route_table.rt[count.index].route[0].address_prefix
  next_hop_type       = data.azurerm_route_table.rt[count.index].route[0].next_hop_type
}


resource "azurerm_route" "aml" {
  count               = var.is_exposed_externally ? 1 : 0
  name                = "rt-aml-${var.tre_id}-${local.short_service_id}"
  resource_group_name = data.azurerm_resource_group.ws.name
  route_table_name    = azurerm_route_table.aml[count.index].name
  address_prefix      = "AzureMachineLearning"
  next_hop_type       = "Internet"
}

resource "azurerm_route" "batch" {
  count               = var.is_exposed_externally ? 1 : 0
  name                = "rt-aml-${var.tre_id}-${local.short_service_id}"
  resource_group_name = data.azurerm_resource_group.ws.name
  route_table_name    = azurerm_route_table.aml[count.index].name
  address_prefix      = "BatchNodeManagement"
  next_hop_type       = "Internet"
}


resource "azurerm_subnet_route_table_association" "rt_aml_subnet_association" {
  count          = var.is_exposed_externally ? 1 : 0
  route_table_id = data.azurerm_route_table.rt.id
  subnet_id      = azurerm_subnet.aml.id
}

resource "azurerm_subnet_route_table_association" "rt_core_aml_subnet_association" {
  count          = var.is_exposed_externally ? 0 : 1
  route_table_id = azurerm_route_table.aml[count.index].id
  subnet_id      = azurerm_subnet.aml.id
}
